# python-unixmode

./: default.nix  flake.nix  package.nix  pyproject.toml
src/richmode/: __init__.py  classproperty.py
src/unixmode/: __init__.py  classproperty.py  octalflag.py
tests/: test_puremode.py
