[project]
name = "unixmode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
hello = "unixmode:hello"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[pytest]
testpaths = "tests"

[tool.pytest.ini_options]
addopts = [
	"--import-mode=importlib",
]
pythonpath = "./src"
